# post-workshop-submission

./: .gitignore  LOCAL_SETUP.md  Makefile  README.md  test_inference.py
projects/Team-8/ATTCO/: .gitignore  QUICKSTART.md  README.md  pyproject.toml
projects/Team-8/ATTCO/.github/workflows/: ci.yml
projects/Team-8/ATTCO/api/: main.py
projects/Team-8/ATTCO/api/middleware/: tracing.py
projects/Team-8/ATTCO/baseline/tools/: __init__.py  math.py  registry.py  search.py
projects/Team-8/ATTCO/benchmarks/: harness.py  runner.py
projects/Team-8/ATTCO/configs/: config.yaml
projects/Team-8/ATTCO/configs/benchmark/: hotpotqa.yaml
projects/Team-8/ATTCO/configs/experiment/: baseline.yaml
projects/Team-8/ATTCO/configs/infra/: local.yaml
projects/Team-8/ATTCO/configs/model/: claude3.yaml
projects/Team-8/ATTCO/configs/optimizer/: depth_controller.yaml  none.yaml
projects/Team-8/ATTCO/configs/tracing/: langsmith.yaml
projects/Team-8/ATTCO/controller/: state.py  utils.py
projects/Team-8/ATTCO/controller/nodes/: allocator.py  arbitrator.py  calibrator.py  confidence.py  difficulty.py  observe.py  terminate.py
projects/Team-8/ATTCO/dashboard/: app.py
projects/Team-8/ATTCO/dashboard/archive_pages/: allocation.py  calibration.py  compression.py  difficulty.py
projects/Team-8/ATTCO/dashboard/pages/: confidence.py  research.py  verification.py
projects/Team-8/ATTCO/docs/architecture/: RUNTIME_ARCHITECTURE_PART3.md
projects/Team-8/ATTCO/infrastructure/config/: loader.py  profile_manager.py
projects/Team-8/ATTCO/infrastructure/docker/: Dockerfile.api  Dockerfile.dashboard
projects/Team-8/ATTCO/llm/: __init__.py  registry.py
projects/Team-8/ATTCO/metrics/: collector.py  normalizer.py  schema.py
projects/Team-8/ATTCO/optimizer/: base.py  registry.py
projects/Team-8/ATTCO/research/: attribution_engine.py  experiment_manager.py  stats_evaluator.py
projects/Team-8/ATTCO/scripts/: run_benchmark.py  run_experiment.py  test_allocator.py  test_arbitration.py  test_compressor.py  test_difficulty.py  test_enforcer.py  test_research.py  test_tool_gater.py  test_verifier.py  verify_api_connectivity.py
projects/Team-8/ATTCO/tracing/: tracer.py
(+182 files in other folders)
