[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attco"
version = "0.1.0"
description = "Adaptive Test-Time Compute Optimization for ReAct-Based LLM Agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ATTCO Research Team" }]

dependencies = [
    "langgraph>=0.2",
    "litellm>=1.40",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "hydra-core>=1.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.0",
    "polars>=0.20",
    "duckdb>=0.10",
    "redis[asyncio]>=5.0",
    "datasets>=2.19",
    "langsmith>=0.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "rich>=13.7",
    "wandb>=0.17",
]

[project.optional-dependencies]
research = [
    "torch>=2.3",
    "sentence-transformers>=3.0",
    "vllm>=0.5",
]
dashboard = [
    "streamlit>=1.35",
    "plotly>=5.22",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "import-linter>=2.0",
    "httpx>=0.27",
]

[project.scripts]
attco-api    = "api.main:start"
attco-bench  = "scripts.run_benchmark:main"
attco-exp    = "scripts.run_experiment:main"

[tool.hatch.build.targets.wheel]
packages = [
    "api", "baseline", "benchmarks", "controller",
    "dashboard", "datasets", "experiments", "metrics",
    "optimizer", "tracing", "visualization", "llm"
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "ANN", "ASYNC", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=attco --cov-report=term-missing -q"

[tool.coverage.run]
source = [
    "api", "baseline", "benchmarks", "controller",
    "datasets", "experiments", "metrics",
    "optimizer", "tracing", "visualization",
]
omit = ["tests/*", "scripts/*"]
